--- a/web/package.json
+++ b/web/package.json
@@ -22,7 +22,8 @@
     "dotenv": "^8.2.0",
     "next": "^9.3.4",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-google-recaptcha": "^2.0.1"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
