--- a/web/package.json
+++ b/web/package.json
@@ -23,7 +23,8 @@
     "next": "^9.3.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-google-recaptcha": "^2.0.1"
+    "react-google-recaptcha": "^2.0.1",
+    "react-in-viewport": "1.0.0-alpha.11"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
