--- a/studio/package.json
+++ b/studio/package.json
@@ -28,6 +28,7 @@
     "@sanity/default-layout": "^1.149.10",
     "@sanity/default-login": "^1.149.7",
     "@sanity/desk-tool": "^1.149.10",
+    "@sanity/production-preview": "^1.149.0",
     "@sanity/vision": "^1.149.0",
     "prop-types": "^15.6",
     "react": "^16.2",
